cluster/core-apps/gotify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotify
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
