cluster/core-apps/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
      - name: gotify
        image: gotify/server:2.1.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: gotify
        volumeMounts:
          - mountPath: /app/data
            name: gotify-config
      volumes:
        - name: gotify-config
          persistentVolumeClaim:
            claimName: gotify-config
