cluster/core-apps/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  selector:
    app: gotify
  ports:
  - port: 80
    targetPort: gotify
